Fix letter spacing

--- a/app/assets/stylesheets/reset.css
+++ b/app/assets/stylesheets/reset.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'PT Sans', 'Lucida Sans', 'Arial', sans-serif;
   word-spacing: -.07em;
-  letter-spacing: .2em;
+  /*letter-spacing: .2em;*/
   margin: 0px;
   color: #555;
 }
